# DOSE

./: CMakeLists.txt  README.md  main.cpp
include/: AlgorithmManager.h  DOSE.h  DistEngine.h  Exceptions.h  IAlgorithmStrategy.h  LinRegStrategy.h  LogRegStrategy.h  RandomDataGenerator.h  Utilities.h  types.h
src/: AlgorithmManager.cpp  DOSE.cpp  DistEngine.cpp  LinRSolver.cpp  LinRSolver.h  LinRegStrategy.cpp  LogRSolver.cpp  LogRSolver.h  LogRegStrategy.cpp  RandomDataGenerator.cpp  Utilities.cpp
tests/: TestDOSE.cpp  TestEngineLinReg.cpp  TestEngineLogReg.cpp  TestRandomDataGen.cpp
